Fix z-index

--- a/client/src/web/assets/css/app.less
+++ b/client/src/web/assets/css/app.less
@@ -1057,6 +1057,7 @@ dialog {
   border: none;
   margin: 0;
   padding: 0;
+  z-index: 10;
   &::backdrop {
     background: none;
   }
